# DataHub

./: .gitignore  CMakeLists.txt  OtaFlash.py  StartCmd.bat
components/data_interface/: CMakeLists.txt  data_interface.c
components/data_interface/include/: data_interface.h
components/data_source_moisture/: CMakeLists.txt  dataSourceMoisture.c
components/data_source_moisture/include/: dataSourceMoisture.h
components/data_source_random/: CMakeLists.txt  dataSourceRandom.c
components/data_source_random/include/: dataSourceRandom.h
components/data_source_raw/: CMakeLists.txt  dataSourceRaw.c
components/data_source_raw/include/: dataSourceRaw.h
components/data_source_temperature/: CMakeLists.txt  dataSourceTemperature.c
components/data_source_temperature/include/: dataSourceTemperature.h
components/web_base/: CMakeLists.txt  webBase.c
components/web_base/certificates/: cacert.pem  prvtkey.pem
components/web_base/include/: webBase.h
components/web_base/webpage/: index.html  styles.css
components/web_flash/: CMakeLists.txt  webFlash.c
components/web_flash/certificates/: otacacert.pem  otaprvtkey.pem
components/web_flash/include/: webFlash.h
components/web_flash/webpage/: flash.html
components/web_visualizer/: CMakeLists.txt  webVisualizer.c
components/web_visualizer/include/: webVisualizer.h
components/web_visualizer/webpage/: charts.html  styles.css
main/: CMakeLists.txt  generate_build_info.cmake  main.c
